--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Aerial by HTML5 UP</title>
+		<title>BrunchBattle</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -31,11 +31,11 @@
 	</head>
 	<body class="loading">
 		<div id="wrapper">
+			
 			<div id="bg"></div>
-			<div id="overlay"></div>
+			<div id="overlay"><h1 style="text-align: center;">BrunchBattle!</h1></div>
 			<div id="main">
-
-				<!-- Header -->
+					<!-- Header -->
 					<header id="header">
 						<!--<h1>Adam Jensen</h1>-->
 						<!--<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>-->
